tests/neg/i2494.scala
enum
object // error // error // error
